// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/builtin/interopRequireDefault\\");

var _camelCase2 = _interopRequireDefault(require(\\"lodash/camelCase\\"));

function translate(value) {
  return (0, _camelCase2[\\"default\\"])(value);
}"
`;

exports[`deadcode 1`] = `
"\\"use strict\\";

const STATIC = false;"
`;

exports[`es3: literal 1`] = `
"\\"use strict\\";

foo[\\"catch\\"];"
`;

exports[`es3: member 1`] = `
"\\"use strict\\";

var foo = {
  \\"catch\\": function () {}
};"
`;

exports[`es2015: classes 1`] = `
"\\"use strict\\";

exports.__esModule = true;
exports.Component = void 0;

class Component {
  main() {}

}

exports.Component = Component;"
`;

exports[`es2015: for_off 1`] = `
"\\"use strict\\";

function test() {
  for (const taskName of tasks) {
    try {
      executeCommands();
    } catch (error) {
      console.error(\\"Error\\");
    }
  }
}"
`;

exports[`es2015: generator 1`] = `
"\\"use strict\\";

function* idMaker() {
  var index = 0;

  while (true) yield index++;
}"
`;

exports[`es2015: set 1`] = `
"\\"use strict\\";

new Set([1, 2, 3]);"
`;

exports[`es2016: exponentiation 1`] = `
"\\"use strict\\";

var result = Math.pow(2, 3);"
`;

exports[`esnext: async 1`] = `
"\\"use strict\\";

function wait() {
  return new Promise(function ($return, $error) {
    return Promise.resolve(loadData()).then(function ($await_1) {
      try {
        return $return();
      } catch ($boundEx) {
        return $error($boundEx);
      }
    }, $error);
  });
}"
`;

exports[`esnext: async_loop 1`] = `
"\\"use strict\\";

function executeTasks(tasks) {
  return new Promise(function ($return, $error) {
    {
      let taskName,
          $iterator_taskName_2 = [tasks[Symbol.iterator]()];
      var $Loop_3_trampoline;
      return ($Loop_3_trampoline = function (q) {
        while (q) {
          if (q.then) return void q.then($Loop_3_trampoline, $error);

          try {
            if (q.pop) {
              if (q.length) return q.pop() ? $Loop_3_exit.call(this) : q;else q = $Loop_3;
            } else q = q.call(this);
          } catch (_exception) {
            return $error(_exception);
          }
        }
      }.bind(this))($Loop_3);

      function $Loop_3() {
        if (!($iterator_taskName_2[1] = $iterator_taskName_2[0].next()).done && ((taskName = $iterator_taskName_2[1].value) || true)) {
          var $Try_1_Post = function () {
            try {
              return $Loop_3;
            } catch ($boundEx) {
              return $error($boundEx);
            }
          };

          var $Try_1_Catch = function (error) {
            try {
              console.error(\\"Error\\");
              return $Try_1_Post();
            } catch ($boundEx) {
              return $error($boundEx);
            }
          };

          try {
            return Promise.resolve(executeCommands()).then(function ($await_5) {
              try {
                return $Try_1_Post();
              } catch ($boundEx) {
                return $Try_1_Catch($boundEx);
              }
            }, $Try_1_Catch);
          } catch (error) {
            $Try_1_Catch(error)
          }
        } else return [1];
      }
    }

    function $Loop_3_exit() {
      return $return();
    }
  });
}"
`;

exports[`esnext: class properties 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/builtin/interopRequireDefault\\");

exports.__esModule = true;
exports.Component = void 0;

var _defineProperty2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/builtin/defineProperty\\"));

class Component {
  constructor() {
    (0, _defineProperty2[\\"default\\"])(this, \\"onClick\\", () => {});
  }

}

exports.Component = Component;"
`;

exports[`esnext: dynamic import 1`] = `
"\\"use strict\\";

Promise.resolve().then(() => require(\\"lodash\\")).then(lodash => {
  console.log(lodash.camelCase(\\"hello world\\"));
});"
`;

exports[`esnext: import 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/builtin/interopRequireDefault\\");

var _camelCase2 = _interopRequireDefault(require(\\"lodash/camelCase\\"));

console.log((0, _camelCase2[\\"default\\"])(\\"hello world\\"));"
`;

exports[`esnext: object spread 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/builtin/interopRequireDefault\\");

var _objectSpread2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/builtin/objectSpread\\"));

let original = {
  bar: 10
};
let variant = (0, _objectSpread2[\\"default\\"])({
  foo: 1
}, original);"
`;

exports[`lodash: async 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/builtin/interopRequireDefault\\");

var _parallel2 = _interopRequireDefault(require(\\"async/parallel\\"));

(0, _parallel2[\\"default\\"])([]);"
`;

exports[`lodash: lodash 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/builtin/interopRequireDefault\\");

var _camelCase2 = _interopRequireDefault(require(\\"lodash/camelCase\\"));

(0, _camelCase2[\\"default\\"])(\\"hello world\\");"
`;

exports[`lodash: recompose 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/builtin/interopRequireDefault\\");

var _compose2 = _interopRequireDefault(require(\\"recompose/compose\\"));

(0, _compose2[\\"default\\"])([]);"
`;

exports[`react: jsx 1`] = `
"\\"use strict\\";

var _ref = React.createElement(\\"h1\\", null, \\"Hello\\");

function render() {
  return _ref;
}"
`;

exports[`react: jsx spread 1`] = `
"\\"use strict\\";

function render(props) {
  return React.createElement(\\"h1\\", Object.assign({
    className: \\"large\\"
  }, props), \\"Hello\\");
}"
`;

exports[`react: proptypes 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/builtin/interopRequireDefault\\");

var _react = _interopRequireDefault(require(\\"react\\"));

class MyComponent extends _react[\\"default\\"].Component {
  render() {
    return _react[\\"default\\"].createElement(\\"div\\", null, this.props.userName);
  }

}"
`;
